<resources>
    <string name="app_name">GeometryCalc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perimetr_triangle">P = a + b + c</string>
    <string name="formula_gerona">S = √ p * (p − a) * (p − b) * (p − c)​, где a, b, c — стороны, p — полупериметр, который можно найти по формуле: p = (a + b + c) : 2</string>
    <string name="area_square">S = a * a</string>
    <string name="calc_per_square">P = 4 * a</string>
    <string name="enter_a">Введите параметр : a</string>
    <string name="enter_data">Введите данные</string>
    <string name="aa">a :</string>
    <string name="bb">b :</string>
    <string name="calcAreaRect">A = a * b</string>
    <string name="calcPerimRect">P = 2 * (a + b)</string>
    <string name="a">a :</string>
    <string name="b">b :</string>
    <string name="c">c :</string>
    <string name="desc_triangle">треугольник</string>
    <string name="desc_triangl">прямоугольник</string>
    <string name="photo_square">квадрат</string>
</resources>