<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentRectangle">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivRectangle"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/rectangle_ab"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/desc_triangl"/>

        <TextView
            android:id="@+id/tvEnterData"
            android:text="@string/enter_data"
            style="@style/style_enter_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="InvalidId,MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/ivRectangle"
            />
        <LinearLayout
            android:id="@+id/constlRectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            android:baselineAligned="false"
            app:layout_constraintTop_toBottomOf="@+id/tvEnterData">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rectangle_label_w"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/a"
                android:layout_margin="5dp"
                android:background="@drawable/shape_const"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivRectangle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rectangle_name_w"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rectangle_label_l"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/b"
                android:layout_margin="5dp"
                android:background="@drawable/shape_const"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rectangle_label_w">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rectangle_name_l"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_const_answer"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/constlRectangle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <TextView
                android:id="@+id/tvcalСulcAreaRectangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/calcAreaRect"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tvAnswerAreaRectangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="48dp"
                android:padding="5dp"
                android:textColor="@color/teal_700"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvcalСulcAreaRectangle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_const_answer"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutArea">

            <TextView
                android:id="@+id/tvCalcPerimetrRectangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="80dp"
                android:padding="5dp"
                android:text="@string/calcPerimRect"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tvAnswerPerimetrRectangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:textSize="25sp"
                android:textColor="@color/teal_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCalcPerimetrRectangle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>